--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -44,6 +44,15 @@
         </div>
       </div>
 
+      <div class="form-group">
+        <div class="row">
+          <div class="col-sm-6">
+            <%= f.label :timezone %>
+            <%= f.time_zone_select :timezone, ActiveSupport::TimeZone.us_zones, {}, {class: "form-control input-lg"} %>
+          </div>
+        </div>
+      </div>
+
       <div class="row">
         <div class="col-sm-6">
           <%= f.submit "Sign up", class: "btn btn-primary" %>
