--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -7,7 +7,11 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <%= link_to 'Home', root_path, class: 'navbar-brand' %>
+      <% if user_signed_in? %>
+        <%= link_to 'Home', user_path(current_user.username), class: 'navbar-brand' %>
+      <% else %>
+        <%= link_to 'Home', root_path, class: 'navbar-brand' %>
+      <% end %>
     </div>
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
