--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,49 +1,78 @@
 <br>
 
-<?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE svg PUBLIC "-//W3C//DTD SVG 1.1//EN" "http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd">
-<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0" y="0" width="325" height="400" viewBox="0, 0, 325, 400">
-  <defs>
-    <linearGradient id="Gradient_1" gradientUnits="userSpaceOnUse" x1="163" y1="5.5" x2="163" y2="395.5">
-      <stop offset="0" stop-color="#FFFFFF" stop-opacity="0"/>
-      <stop id="moving-line" offset="<%= 1 - @presenter.drinks_today_percentage_to_goal %>" stop-color="#97CAE2" stop-opacity="0.428"/>
-      <stop offset="1" stop-color="#0D84BB"/>
-    </linearGradient>
-  </defs>
-  <g id="Layer_1">
-    <g>
-      <path id="filler" d="M13,5.5 L54,395.5 L272,395.5 L313,5.5 L13,5.5" fill="url(#Gradient_1)"/>
-      <path id="glass-path" d="M13,5.5 L54,395.5 L272,395.5 L313,5.5 L13,5.5" fill-opacity="0" stroke="#0A7D92" stroke-width="6"/>
+<div id='water' style="float:left">
+  <?xml version="1.0" encoding="UTF-8"?>
+  <!DOCTYPE svg PUBLIC "-//W3C//DTD SVG 1.1//EN" "http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd">
+  <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0" y="0" width="325" height="400" viewBox="0, 0, 325, 400">
+    <defs>
+      <linearGradient id="Gradient_1" gradientUnits="userSpaceOnUse" x1="163" y1="5.5" x2="163" y2="395.5">
+        <stop offset="0" stop-color="#FFFFFF" stop-opacity="0"/>
+        <stop id="moving-line" offset="<%= 1 - @presenter.drinks_today_percentage_to_goal %>" stop-color="#97CAE2" stop-opacity="0.428"/>
+        <stop offset="1" stop-color="#0D84BB"/>
+      </linearGradient>
+    </defs>
+    <g id="Layer_1">
+      <g>
+        <path id="filler" d="M13,5.5 L54,395.5 L272,395.5 L313,5.5 L13,5.5" fill="url(#Gradient_1)"/>
+        <path id="glass-path" d="M13,5.5 L54,395.5 L272,395.5 L313,5.5 L13,5.5" fill-opacity="0" stroke="#0A7D92" stroke-width="6"/>
+      </g>
     </g>
-  </g>
-</svg>
-<div id='drink-info'>
-  <h2 id='count' style="margin-left: 75px"><%= @presenter.drinks_today_count %></h2>
-  <h3 id='percentage' style="margin-left: 75px"><%= number_to_percentage(@presenter.drinks_today_percentage_to_goal * 100, precision: 0) %></h3>
-  <h3 id='time' style="margin-left: 75px"><%= @presenter.most_recent_drink_time %></h3>
+  </svg>
+  <div id='drink-info'>
+    <h2 id='drink-count' style="margin-left: 75px"><%= @presenter.drinks_today_count %></h2>
+    <h3 id='drink-percentage' style="margin-left: 75px"><%= number_to_percentage(@presenter.drinks_today_percentage_to_goal * 100, precision: 0) %></h3>
+    <h3 id='drink-time' style="margin-left: 75px"><%= @presenter.most_recent_drink_time %></h3>
+  </div>
+</div>
+
+<div id='veggie' style='margin-top:-45px'>
+  <svg height="40%" id="svg2" version="1.1" viewBox="0 0 50 50" width="40%" xmlns="http://www.w3.org/2000/svg" xmlns:cc="http://creativecommons.org/ns#" xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns:svg="http://www.w3.org/2000/svg">
+    <defs id="defs14">
+    </defs>
+    <metadata id="metadata4">
+      <rdf:RDF>
+        <cc:Work rdf:about="">
+          <dc:format>image/svg+xml</dc:format>
+          <dc:type rdf:resource="http://purl.org/dc/dcmitype/StillImage"/>
+          <dc:title/>
+        </cc:Work>
+      </rdf:RDF>
+    </metadata>
+    <path class='tomato' id='stem' d="M24.7,5.65c-2.7,2.23-3.2,5.65-2.2,10.8" fill="none" stroke="#080" opacity="0.1" stroke-width="2.5"/>
+    <path class='tomato' id='tomato' d="m41.6,16.9c6.71,7.89,3.30,18.5-2.42,23.6-5.73,5.11-16.2,6.50-26.6,1.84-10.4-4.7-13.1-21.3-3.65-27,9.45-5.68,26-6.29,32.6,1.6z" fill="#F00" opacity="0.1"/>
+    <path class='tomato' id='shine' d="m15.6,15.3c0.683,1.19-1.88,1.16-4.97,4.10-2.95,2.8-2.64,6.7-4.14,6.5-1.50-0.2,0.72-7,2.67-8.5,1.95-1.56,5.80-3.27,6.48-2.08z" fill="#FFF" opacity="0.1"/>
+  </svg>
+  <div id='veggie-info'>
+    <h2 id='veggie-count' style="margin-left: 75px"><%= @presenter.veggies_today_count %></h2>
+    <h3 id='veggie-percentage' style="margin-left: 75px"><%= number_to_percentage(@presenter.veggies_today_percentage_to_goal * 100, precision: 0) %></h3>
+    <h3 id='veggie-time' style="margin-left: 75px"><%= @presenter.most_recent_veggie_time %></h3>
+  </div>
 </div>
 
 <script>
-
-  $(document).ready(function() {
-    // $('#Layer_1 g:first-child').first().children().first().attr('fill', 'white');
-  });
 
   $('#Layer_1').on('click', function() {
     fillGlass();
   });
 
+  $('#svg2').on('click', function() {
+    fillTomato();
+  });
+
   var oneSixth = 0.166
-  var offset          = 1 - <%= @presenter.drinks_today_percentage_to_goal %>
-  var glassCount      =     <%= @presenter.drinks_today_count              %>
-  var glassPercentage =     <%= @presenter.drinks_today_percentage_to_goal %>
+  var glassoffset      = 1 - <%= @presenter.drinks_today_percentage_to_goal %>
+  var glassCount       =     <%= @presenter.drinks_today_count              %>
+  var glassPercentage  =     <%= @presenter.drinks_today_percentage_to_goal %>
+  var veggieOffset     = 1 - <%= @presenter.veggies_today_percentage_to_goal %>
+  var veggieCount      =     <%= @presenter.veggies_today_count              %>
+  var veggiePercentage =     <%= @presenter.veggies_today_percentage_to_goal %>
 
   function fillGlass() {
-    offset          -= oneSixth;
+    glassOffset          -= oneSixth;
     glassPercentage += oneSixth
     glassCount      += 1;
 
-    postDrink(offset, glassCount, glassPercentage);
+    postDrink(glassOffset, glassCount, glassPercentage);
   };
 
   function postDrink(offset, glassCount, glassPercentage) {
@@ -62,9 +91,45 @@
 
   function updateDrinkElements(offset, glassCount, glassPercentage, timeString) {
     $('#moving-line').attr('offset', offset);
-    $('#count').text(glassCount);
-    $('#percentage').text(Math.round(glassPercentage * 100) + "%");
-    $('#time').text(grabTimeString());
+    $('#drink-count').text(glassCount);
+    $('#drink-percentage').text(Math.round(glassPercentage * 100) + "%");
+    $('#drink-time').text(grabTimeString());
+  };
+
+  function updateDrinkElements(offset, glassCount, glassPercentage, timeString) {
+    $('#moving-line').attr('offset', offset);
+    $('#drink-count').text(glassCount);
+    $('#drink-percentage').text(Math.round(glassPercentage * 100) + "%");
+    $('#drink-time').text(grabTimeString());
+  };
+
+  function fillTomato() {
+    veggieOffset     += oneSixth;
+    veggiePercentage += oneSixth
+    veggieCount      += 1;
+
+    postVeggie(veggieOffset, veggieCount, veggiePercentage);
+  };
+
+  function postVeggie(offset, veggieCount, veggiePercentage) {
+    var user_id = <%= @user.id %>
+    $.ajax({
+      url: "/punches",
+      type: "POST",
+      data: { punch: {
+        punch_type: "veggie",
+        user_id: user_id
+      },
+      success: updateVeggieElements(offset, veggieCount, veggiePercentage)
+    }
+    });
+  };
+
+  function updateVeggieElements(offset, veggieCount, veggiePercentage, timeString) {
+    $('.tomato').attr('opacity', offset);
+    $('#veggie-count').text(veggieCount);
+    $('#veggie-percentage').text(Math.round(veggiePercentage * 100) + "%");
+    $('#veggie-time').text(grabTimeString());
   };
 
   function grabTimeString() {
