--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,9 +1,9 @@
 <br>
 
-<div id='water' style="float:left">
+<div id='water' >
   <?xml version="1.0" encoding="UTF-8"?>
   <!DOCTYPE svg PUBLIC "-//W3C//DTD SVG 1.1//EN" "http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd">
-  <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0" y="0" width="325" height="400" viewBox="0, 0, 325, 400">
+  <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0" y="0" width="100%" height="400" viewBox="0, 0, 325, 400">
     <defs>
       <linearGradient id="Gradient_1" gradientUnits="userSpaceOnUse" x1="163" y1="5.5" x2="163" y2="395.5">
         <stop offset="0" stop-color="#FFFFFF" stop-opacity="0"/>
@@ -19,14 +19,14 @@
     </g>
   </svg>
   <div id='drink-info'>
-    <h2 id='drink-count' style="margin-left: 75px"><%= @presenter.drinks_today_count %></h2>
-    <h3 id='drink-percentage' style="margin-left: 75px"><%= number_to_percentage(@presenter.drinks_today_percentage_to_goal * 100, precision: 0) %></h3>
-    <h3 id='drink-time' style="margin-left: 75px"><%= @presenter.most_recent_drink_time %></h3>
+    <h2 id='drink-count' style="margin-left: 5%; float:left"><%= @presenter.drinks_today_count %></h2>
+    <h3 id='drink-percentage' style="margin-left: 5%; float:left"><%= number_to_percentage(@presenter.drinks_today_percentage_to_goal * 100, precision: 0) %></h3>
+    <h3 id='drink-time' style="margin-left: 5%; float:left"><%= @presenter.most_recent_drink_time %></h3>
   </div>
 </div>
 
-<div id='veggie' style='margin-top:-45px'>
-  <svg height="40%" id="svg2" version="1.1" viewBox="0 0 50 50" width="40%" xmlns="http://www.w3.org/2000/svg" xmlns:cc="http://creativecommons.org/ns#" xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns:svg="http://www.w3.org/2000/svg">
+<div id='veggie'>
+  <svg height="400px" id="svg2" version="1.1" viewBox="0 0 50 50" width="100%" xmlns="http://www.w3.org/2000/svg" xmlns:cc="http://creativecommons.org/ns#" xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns:svg="http://www.w3.org/2000/svg">
     <defs id="defs14">
     </defs>
     <metadata id="metadata4">
@@ -43,10 +43,10 @@
     <path class='tomato' id='tomato' d="m41.6,16.9c6.71,7.89,3.30,18.5-2.42,23.6-5.73,5.11-16.2,6.50-26.6,1.84-10.4-4.7-13.1-21.3-3.65-27,9.45-5.68,26-6.29,32.6,1.6z" fill="#F00" opacity="<%= starting_opacity %>"/>
     <path class='tomato' id='shine' d="m15.6,15.3c0.683,1.19-1.88,1.16-4.97,4.10-2.95,2.8-2.64,6.7-4.14,6.5-1.50-0.2,0.72-7,2.67-8.5,1.95-1.56,5.80-3.27,6.48-2.08z" fill="#FFF" opacity="<%= starting_opacity %>"/>
   </svg>
-  <div id='veggie-info' style="margin-top: -12px">
-    <h2 id='veggie-count' style="margin-left: 75px"><%= @presenter.veggies_today_count %></h2>
-    <h3 id='veggie-percentage' style="margin-left: 75px"><%= number_to_percentage(@presenter.veggies_today_percentage_to_goal * 100, precision: 0) %></h3>
-    <h3 id='veggie-time' style="margin-left: 75px"><%= @presenter.most_recent_veggie_time %></h3>
+  <div id='veggie-info'>
+    <h2 id='veggie-count' style="margin-left: 5%; float:left"><%= @presenter.veggies_today_count %></h2>
+    <h3 id='veggie-percentage' style="margin-left: 5%; float:left"><%= number_to_percentage(@presenter.veggies_today_percentage_to_goal * 100, precision: 0) %></h3>
+    <h3 id='veggie-time' style="margin-left: 5%; float:left"><%= @presenter.most_recent_veggie_time %></h3>
   </div>
 </div>
 
@@ -54,7 +54,7 @@
 
   <?xml version="1.0" encoding="UTF-8"?>
   <!DOCTYPE svg PUBLIC "-//W3C//DTD SVG 1.1//EN" "http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd">
-  <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0" y="0" width="900" height="150" viewBox="0, 0, 900, 150">
+  <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0" y="0" width="100%" height="150" viewBox="0, 0, 900, 150">
     <g id="sweats">
       <g id='sweat-0'>
         <path d="M72.943,30.626 C68.734,30.626 65.31,34.061 65.31,38.281 C65.31,42.511 68.734,45.924 72.943,45.924 C77.173,45.924 80.618,42.511 80.618,38.281 C80.618,34.061 77.173,30.626 72.943,30.626" fill="#FF2600" opacity='0.2'/>
@@ -99,9 +99,9 @@
   </svg>
 
   <div id='sweat-info' style="margin-top: -12px">
-    <h2 id='sweat-count' style="margin-left: 75px"><%= @presenter.sweats_this_week_count %></h2>
-    <h3 id='sweat-percentage' style="margin-left: 75px"><%= number_to_percentage(@presenter.sweats_this_week_percentage_to_goal * 100, precision: 0) %></h3>
-    <h3 id='sweat-time' style="margin-left: 75px"><%= @presenter.most_recent_sweat_time %></h3>
+    <h2 id='sweat-count' style="margin-left: 5%; float:left"><%= @presenter.sweats_this_week_count %></h2>
+    <h3 id='sweat-percentage' style="margin-left: 5%; float:left"><%= number_to_percentage(@presenter.sweats_this_week_percentage_to_goal * 100, precision: 0) %></h3>
+    <h3 id='sweat-time' style="margin-left: 5%; float:left"><%= @presenter.most_recent_sweat_time %></h3>
   </div>
 </div>
 
