--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,11 @@
 <% title("Home Page") %>
-<h1><i class="fa fa-home"></i> Home Page <small>views/pages/home.html.erb</small></h1>
+<h1>triple six</h1>
+
+<h3>a doctor once told me that being healthy is as easy as 666</h3>
+<p>6 glasses of water a day</p>
+<p>6 servings of fruits and veggies a day</p>
+<p>sweat 6 times a week</p>
+
+<p>triple six helps you keep track of all these by tapping whenever you do any of those things.</p>
+
+<p>that's it, get tapping!</p>
