--- a/app/assets/stylesheets/railsbricks_custom.css.scss
+++ b/app/assets/stylesheets/railsbricks_custom.css.scss
@@ -312,7 +312,7 @@ $close-color: #000000;
 $close-text-shadow: 0px 1px 0px #ffffff; 
 
 // Type
-$text-muted: #bbbbbb; // Text muted color
+$text-muted: #4a4a4a; // Text muted color
 $abbr-border-color: #cccccc; // Abbreviations and acronyms border color
 $headings-small-color: #cccccc; // Headings small color
 $blockquote-small-color: #cccccc; // Blockquote small color
